force-app/main/default/objects/Motorcycle__c/Motorcycle__c.object-meta.xml
<CustomObject>
    <description>Details about your motorcycle</description>
    <label>Motorcycle</label>
    <nameField>
        <label>Motorcycle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Motorcycles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>