force-app/main/default/objects/Motorcycle__c/fields/Engine_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Engine_Capacity__c</fullName>
    <description>What is the engine capacity of the bike?</description>
    <label>Engine Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>