force-app/main/default/objects/Motorcycle__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <description>Who is the maker of the motorcycle?</description>
    <label>Make</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>