force-app/main/default/objects/Motorcycle__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>What model is that bike?</description>
    <label>Model</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>