force-app/main/default/objects/Motorcycle__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>How much does the bike weigh approximately with added modifications and full tank of fuel?</description>
    <label>Weight</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>